name:                wedding
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/dbp/wedding
license:             ISC
license-file:        LICENSE
author:              Daniel Patterson
maintainer:          dbp@dbpmail.net
copyright:           2017 Daniel Patterson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable wedding
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , fn
                     , larceny
                     , text
                     , containers
                     , wai
                     , warp
                     , digestive-functors
                     , mtl
                     , lucid
                     , resourcet
                     , http-types
                     , bytestring
                     , wai-extra
                     , directory
                     , postgresql-simple
                     , resource-pool
                     , heroku
                     , time
                     , wai-middleware-rollbar
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dbp/wedding
